# libredfish

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
src/: ami.rs  bios.rs  common.rs  dell.rs  error.rs  hpe.rs  jsonmap.rs  lenovo.rs  lib.rs  liteon_powershelf.rs  manager.rs  network.rs  nvidia.rs  nvidia_dpu.rs  nvidia_gbswitch.rs  nvidia_gbx00.rs  nvidia_gh200.rs  nvidia_viking.rs  power.rs  standard.rs  storage.rs  supermicro.rs  system.rs  thermal.rs
src/model/: account_service.rs  bios.rs  boot.rs  chassis.rs  component_integrity.rs  ethernet_interface.rs  manager.rs  mod.rs  network_device_function.rs  power.rs  resource.rs  secure_boot.rs  sensor.rs  service_root.rs  storage.rs  system.rs  thermal.rs  update_service.rs
src/model/oem/: dell.rs  hp.rs  lenovo.rs  mod.rs  nvidia_dpu.rs  nvidia_openbmc.rs
src/model/testdata/: bios_lenovo.json  boot_option.json  boot_options.json  ethernet_lenovo.json  manager_datetime_test.json  manager_dell.json  manager_lenovo.json  power-lenovo_health_critical.json  system_bluefield_boot_bugs.json  system_bluefield_boot_valid.json  system_dell.json  system_lenovo.json
tests/: bios.json  integration_test.rs  manager_dell_attrs.json  redfishMockupServer.py  run_mock_server.sh
tests/mockups/: README
tests/mockups/dell/redfish/v1/: index.json
tests/mockups/dell/redfish/v1/Chassis/: index.json
tests/mockups/hpe/redfish/v1/ResourceDirectory/: index.json
tests/mockups/liteon_powershelf/: README
tests/mockups/liteon_powershelf/redfish/v1/: index.json
tests/mockups/liteon_powershelf/redfish/v1/AccountService/: index.json
tests/mockups/liteon_powershelf/redfish/v1/Chassis/: index.json
tests/mockups/liteon_powershelf/redfish/v1/JsonSchemas/: index.json
tests/mockups/liteon_powershelf/redfish/v1/TaskService/: index.json
tests/mockups/liteon_powershelf/redfish/v1/UpdateService/: index.json
tests/mockups/nvidia_gbswitch/: README
tests/mockups/nvidia_gbswitch/redfish/v1/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/$metadata/: index.xml
tests/mockups/nvidia_gbswitch/redfish/v1/AccountService/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/Chassis/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/ComponentIntegrity/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/EventService/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/Fabrics/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/Managers/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/Registries/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/Systems/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/TaskService/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/TelemetryService/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/UpdateService/: index.json
tests/mockups/nvidia_gbswitch/redfish/v1/odata/: index.json
tests/mockups/nvidia_gh200/: README
tests/mockups/nvidia_gh200/redfish/v1/: index.json
tests/mockups/nvidia_gh200/redfish/v1/$metadata/: index.xml
tests/mockups/nvidia_gh200/redfish/v1/AccountService/: index.json
tests/mockups/nvidia_gh200/redfish/v1/Chassis/: index.json
tests/mockups/nvidia_gh200/redfish/v1/ComponentIntegrity/: index.json
tests/mockups/nvidia_gh200/redfish/v1/EventService/: index.json
tests/mockups/nvidia_gh200/redfish/v1/Fabrics/: index.json
tests/mockups/nvidia_gh200/redfish/v1/JsonSchemas/: index.json
tests/mockups/nvidia_gh200/redfish/v1/Registries/: index.json
tests/mockups/nvidia_gh200/redfish/v1/ServiceConditions/: index.json
tests/mockups/nvidia_gh200/redfish/v1/TaskService/: index.json
(+1477 files in other folders)
