[package]
name = "libredfish"
description = "A redfish library. Useful for querying server hardware from a BMC."
authors = ["Chris Holcombe <xfactor973@gmail.com>", "NVIDIA Engineering"]
repository = "https://github.com/nvidia/libredfish"
license = "MIT"
version = "0.15.0"
edition = "2021"

[dependencies]
async-trait = "*"
log = "0.4"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }
serde_derive = "1"
serde = "1"
serde_with = "2.1"
serde_json = "1"
thiserror = { version = "1", registry = "cratesio" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", registry = "cratesio" }
version-compare = "0.1.1"

[dev-dependencies]
anyhow = { version = "1", registry = "cratesio" }
tracing-subscriber = { version = "*", features = ["env-filter", "local-time"] }

