[package]
name = "libredfish"
description = "A redfish library. Useful for querying server hardware from a BMC."
authors = [
  "NVIDIA Engineering <noemail@nvidia.com>",
  "Chris Holcombe <xfactor973@gmail.com>",
]
repository = "https://github.com/NVIDIA/libredfish"
license = "MIT"
# Version is managed via git tags, see GitHub Releases
version = "0.0.0"
edition = "2021"
publish = [ "internal" ]

[dependencies]
async-trait = { version = "*" }
clap = { version = "4", features = ["derive", "env"] }
log = { version = "0.4" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
  "socks",
  "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.4" }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
version-compare = { version = "0.1" }
regex = "1.10"
chrono = { version = "0.4.34", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
anyhow = { version = "1" }
tracing-subscriber = { version = "*", features = [
  "env-filter",
  "local-time",
] }
