[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
libredfish = { path = ".." }
getopts = "0.2"
reqwest = {version = "0.11", features = ["blocking", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { version = "1", registry = "cratesio" }
